tests/NormalTests/paczka1/fuzzy1/71727573.err
Error in line 6: QFnchIP A55 56,3
Error in line 5: ETzJbyH S349 71,2
Error in line 33: ETzJbyH S349 -2,2
Error in line 29: ETzJbyH S349 36,6
